style: prevent cue overflow

--- a/apps/client/src/features/rundown/event-block/EventBlock.module.scss
+++ b/apps/client/src/features/rundown/event-block/EventBlock.module.scss
@@ -92,6 +92,12 @@ $skip-opacity: 0.1;
   }
 
   .cue {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 5.5rem;
+    text-align: center;
+
     font-weight: 600;
     letter-spacing: 0.5px;
     rotate: -90deg;
